[gd_scene load_steps=6 format=3 uid="uid://b4jmr4b0ul4bk"]

[ext_resource type="Script" uid="uid://w7u6msismycv" path="res://addons/inventory_system/item_repository.gd" id="1_6ice8"]
[ext_resource type="Script" uid="uid://cw0h8v3oo467c" path="res://addons/inventory_system/item_database.gd" id="1_523c4"]
[ext_resource type="Script" uid="uid://bpmvu33miw1g7" path="res://addons/inventory_system/inventory_controller.gd" id="1_vbiyp"]
[ext_resource type="Script" uid="uid://bifh2nkb0vxdu" path="res://addons/inventory_system/item.gd" id="2_7q6mg"]
[ext_resource type="Script" uid="uid://osk3gvvrf7d1" path="res://addons/inventory_system/inventory_view.gd" id="5_widnr"]

[node name="Inventory" type="Node"]

[node name="Model" type="Node" parent="."]

[node name="ItemDatabase" type="Node" parent="Model"]
script = ExtResource("1_523c4")

[node name="item" type="Node3D" parent="Model/ItemDatabase"]
script = ExtResource("2_7q6mg")
label = "potion"
weight = 1.0

[node name="item2" type="Node3D" parent="Model/ItemDatabase"]
script = ExtResource("2_7q6mg")
label = "rune"
weight = 0.5
can_equip = false

[node name="item3" type="Node3D" parent="Model/ItemDatabase"]
script = ExtResource("2_7q6mg")
label = "sword"
weight = 1.5
can_use = false

[node name="item4" type="Node3D" parent="Model/ItemDatabase"]
script = ExtResource("2_7q6mg")
label = "armor"
weight = 10.0

[node name="item5" type="Node3D" parent="Model/ItemDatabase"]
script = ExtResource("2_7q6mg")
label = "ring"
weight = 0.1

[node name="item6" type="Node3D" parent="Model/ItemDatabase"]
script = ExtResource("2_7q6mg")
label = "hammer"
weight = 5.0
can_use = false

[node name="ItemRepository" type="Node" parent="Model" node_paths=PackedStringArray("database")]
script = ExtResource("1_6ice8")
database = NodePath("../ItemDatabase")

[node name="Controller" type="Node" parent="." node_paths=PackedStringArray("item_repository", "view")]
script = ExtResource("1_vbiyp")
item_repository = NodePath("../Model/ItemRepository")
view = NodePath("../View")

[node name="View" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 506.0
script = ExtResource("5_widnr")

[node name="DevButtons" type="Control" parent="View"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="View/DevButtons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="View/DevButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="PickUpItem" type="Button" parent="View/DevButtons/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pick Up Item"

[node name="MarginContainer2" type="MarginContainer" parent="View/DevButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="DropItem" type="Button" parent="View/DevButtons/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Drop Item"

[node name="MarginContainer3" type="MarginContainer" parent="View/DevButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="UseItem" type="Button" parent="View/DevButtons/HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use Item"

[node name="MarginContainer4" type="MarginContainer" parent="View/DevButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="EquipItem" type="Button" parent="View/DevButtons/HBoxContainer/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Equip Item"

[node name="Inventory" type="Control" parent="View"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="View/Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HSplitContainer" type="HSplitContainer" parent="View/Inventory/MarginContainer"]
layout_mode = 2
split_offset = 230

[node name="ItemList" type="ItemList" parent="View/Inventory/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="View/Inventory/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Equiped" type="Label" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "Equiped:"

[node name="MarginContainer2" type="MarginContainer" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Equiped" type="Label" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="LastItemUsed" type="Label" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2/MarginContainer2"]
layout_mode = 2
text = "Last Item Used:"

[node name="MarginContainer3" type="MarginContainer" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="SelectedItem" type="Label" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2/MarginContainer3"]
layout_mode = 2
text = "Selected Item:"

[node name="MarginContainer4" type="MarginContainer" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="InventoryWeights" type="Label" parent="View/Inventory/MarginContainer/HSplitContainer/VBoxContainer2/MarginContainer4"]
layout_mode = 2
text = "Inventory Weight: "
